--- a/doc/0x02-c.md
+++ b/doc/0x02-c.md
@@ -2,6 +2,22 @@
 
 <img src="../img/cLang/cLang.jpeg">
 
+## 🔧 GCC Compilation
+
+```bash
+# Basic compilation
+gcc program.c -o program
+
+# With debugging info
+gcc -g program.c -o program
+
+# With all warnings
+gcc -Wall program.c -o program
+
+# 32-bit compilation
+gcc -m32 program.c -o program
+```
+
 ## 📌 Basic Data Types
 
 | Type            | Size    | Range                           | Description        |
@@ -388,22 +404,6 @@ void modify_array(int arr[], int size) {
 }
 ```
 
-## 🔧 GCC Compilation
-
-```bash
-# Basic compilation
-gcc program.c -o program
-
-# With debugging info
-gcc -g program.c -o program
-
-# With all warnings
-gcc -Wall program.c -o program
-
-# 32-bit compilation
-gcc -m32 program.c -o program
-```
-
 ## 📚 Essential Headers
 
 | Header     | Purpose           | Key Functions                      |
@@ -467,11 +467,9 @@ int main() {
 
 ## ⚙️ Macros (`#define`, `#undef`)
 
-Macros are simple text substitutions performed by the C **preprocessor** _before_ the compiler sees the code. They are defined using the `#define` directive.
+Macros are simple text substitutions performed by the C **preprocessor directive** _before_ the compiler sees the code. They are defined using the `#define` directive.
 
-#### 📝 Object-like Macros (Constants)
-
-Used to define constants, offering a type-agnostic alternative to `const` variables, though `const` variables are generally safer.
+### 📝 Object-like Macros
 
 ```c
 #define MAX_SIZE 100
@@ -479,49 +477,41 @@ Used to define constants, offering a type-agnostic alternative to `const` variab
 #define DEBUG_MODE
 ```
 
-#### 🛡️ Header Guards (Include Guards)
+### 🛡️ Header Guards
 
 The most crucial use of preprocessor directives is preventing the contents of a header file from being included multiple times in a single translation unit, which would lead to redefinition errors.
 
 ```c
-// Meaningful Snippet: Header Guard Structure
 #ifndef MY_HEADER_H
 #define MY_HEADER_H
 
-// Declarations (functions, structs, etc.) go here
+// Declarations
 
-#endif // MY_HEADER_H
+#endif
 ```
-
----
 
 ## 🔄 Type Casting
 
-**Type casting** is a way to explicitly convert a value from one data type to another. It tells the compiler to treat a variable or expression of type $A$ as if it were of type $B$.
-
-### 💡 Basic (Explicit) Type Casting
-
-The syntax for a cast is simply prefixing the expression with the desired type in parentheses.
+### 💡 Implicit/Explicit Casting
 
 ```c
-// Meaningful Snippet: Basic Type Cast
 int total = 100;
 int count = 7;
 
-// Implicit division: Integer division discards the fractional part
-float average_implicit = total / count; // average_implicit will be 14.00
+// average_implicit will be 14.00
+float average_implicit = total / count;
 
-// Explicit casting ensures floating-point division
-float average_explicit = (float)total / count; // average_explicit will be 14.2857...
+// average_explicit will be 14.2857...
+float average_explicit = (float)total / count;
 ```
 
 ### 📏 Size and Signedness Conversions
 
-| Conversion Type     | Description                                                              | Effect                                                                                                                                                                |
-| :------------------ | :----------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **Widening**        | Converting from a smaller type to a larger type (e.g., `int` to `long`). | Generally safe, preserves the value.                                                                                                                                  |
-| **Narrowing**       | Converting from a larger type to a smaller type (e.g., `long` to `int`). | **Dangerous**; can lead to **truncation** (loss of most-significant bits).                                                                                            |
-| **Signed/Unsigned** | Converting between signed and unsigned types.                            | Signed $\to$ Unsigned: Negative values wrap around. Unsigned $\to$ Signed: Behavior is implementation-defined, but often uses the sign bit (danger of sign-flipping). |
+| Conversion Type     | Description                                                              | Effect                                                     |
+| :------------------ | :----------------------------------------------------------------------- | :--------------------------------------------------------- |
+| **Widening**        | Converting from a smaller type to a larger type (e.g., `int` to `long`). | Generally safe, preserves the value.                       |
+| **Narrowing**       | Converting from a larger type to a smaller type (e.g., `long` to `int`). | **Dangerous**; can lead to **truncation**                  |
+| **Signed/Unsigned** | Converting between signed and unsigned types.                            | 32 bits stay the same, so -1 $\to$ 4294967295 (0xffffffff) |
 
 ### 🔑 Advanced Type Casting: Pointers
 
@@ -537,59 +527,50 @@ Casting pointers is an advanced technique, often used in system programming, mem
     void *generic_ptr = int_ptr;
     ```
 
-2.  **Pointer-to-Pointer Casting:** Used when you need to access raw memory or reinterpret data structures. This is a common pattern in device drivers or network programming.
+2.  **Pointer-to-Pointer Casting:** Used when you need to access raw memory or reinterpret data structures
 
     ```c
-    // Meaningful Snippet: Pointer Casting
     int x = 0x12345678;
-
-    // Cast an int pointer to a char pointer to read individual bytes
     unsigned char *byte_ptr = (unsigned char *)&x;
 
-    printf("First byte: 0x%x\n", byte_ptr[0]); // Prints '78' or '12' depending on endianness
+    printf("First byte: 0x%x\n", byte_ptr[0]);
     ```
 
 3.  **Function Pointer Casting:** Used to cast a function pointer to another function pointer type, typically to create generic callbacks or interface with foreign code (e.g., dynamic libraries).
 
-    ⚠️ **Warning:** Casting between pointer types is generally an indication that the underlying architecture of data is being assumed. This can lead to non-portable or fragile code.
-
----
-
 ## 🧩 Aggregated Types: Struct, Union, Enum
 
-### 🧱 Struct (`struct`)
+### 🧱 Struct
 
 A **structure** (`struct`) is a user-defined data type that aggregates logically related variables (members) of potentially **different** data types under a single name. All members of a struct are stored in **separate memory locations**.
 
 #### 📝 Definition and Usage
 
 ```c
-// Meaningful Snippet: Struct
 struct Point {
     int x;
     int y;
-}; // Don't forget the semicolon!
+};
 
-// Usage
 struct Point p1;
 p1.x = 10;
 p1.y = 20;
 
-struct Point p2 = {5, 15}; // Initializer list
+// Initializer list
+struct Point p2 = {5, 15};
 ```
 
 #### 💾 Memory Layout (Padding)
 
 The compiler often inserts **padding** (unused bytes) between members to align them on memory boundaries, which improves access speed. `sizeof(struct)` is often greater than the sum of the sizes of its members.
 
-### ⚛️ Union (`union`)
+### ⚛️ Union
 
 A **union** is a user-defined data type that can hold members of potentially different data types, but **only one member can hold a value at any given time**. All members share the **same memory location**. The size of a union is equal to the size of its largest member.
 
 #### 📝 Definition and Usage
 
 ```c
-// Meaningful Snippet: Union
 union Value {
     int i;
     float f;
@@ -597,23 +578,38 @@ union Value {
 };
 
 union Value v;
-v.i = 42;             // i is set
-// v.f is now garbage/undefined
+v.i = 42;
 printf("Int: %d\n", v.i);
-
-v.f = 3.14;           // f is set, overwrites the memory used by i
+v.f = 3.14;
 // v.i is now a reinterpretation of 3.14 as an int
 printf("Float: %f\n", v.f);
 ```
 
-### 🏷️ Enumeration (`enum`)
+#### 📝 Example:
+
+```c
+typedef union {
+    unsigned int addr;
+    unsigned char bytes[4];
+} ipv4_addr;
+
+ipv4_addr myaddr = {0}
+
+myaddr.bytes[0] = 127;
+myaddr.bytes[1] = 0;
+myaddr.bytes[2] = 0;
+myaddr.bytes[3] = 1;
+
+printf("%x\n", myaddr.addr);
+```
+
+### 🏷️ Enumeration
 
 An **enumeration** (`enum`) is a list of named integer constants. It makes code more readable by assigning meaningful names to integer values. By default, the first enumerator has the value 0, and subsequent enumerators have a value 1 greater than the previous one.
 
 #### 📝 Definition and Usage
 
 ```c
-// Meaningful Snippet: Enum
 enum Day {
     MON = 1, // Explicitly start at 1
     TUE,     // Automatically 2
@@ -631,15 +627,11 @@ if (today >= SAT) {
 }
 ```
 
----
-
 ## ✍️ Typedef Struct (Aliasing)
 
 The `typedef` keyword is used to create an **alias** (a new name) for an existing data type. It is most frequently used with structures, unions, and enumerations to simplify declarations.
 
 ### ❌ Without `typedef`
-
-When defining a variable of a structure type, you must include the `struct` keyword every time.
 
 ```c
 struct Person {
@@ -647,22 +639,17 @@ struct Person {
     int age;
 };
 
-// Must use 'struct Person' for variable declaration
 struct Person student;
 ```
 
 ### ✅ With `typedef`
 
-By using `typedef`, you create a new, simpler name (`Person`) for the entire structure type (`struct Person`).
-
 ```c
-// Meaningful Snippet: Typedef Struct
 typedef struct {
     char name[50];
     int age;
-} Person; // The new type name is 'Person'
+} Person;
 
-// Usage is cleaner, without the 'struct' keyword
 Person student;
 student.age = 25;
 ```
@@ -674,11 +661,9 @@ When a structure needs to reference itself (e.g., for linked lists or trees), yo
 ```c
 typedef struct Node {
     int data;
-    struct Node *next; // Must use 'struct Node' here
-} Node; // The user-facing type is 'Node'
+    struct Node *next;
+} Node;
 ```
-
----
 
 ## 🎯 Function Pointers
 
@@ -689,19 +674,17 @@ A **function pointer** is a variable that stores the memory address of a functio
 The syntax can be complex, but it logically replaces the function name with `(*pointer_name)`.
 
 ```c
-// A function that adds two integers
-int add(int a, int b) { return a + b; }
+int add(int a, int b) {
+    return a + b;
+}
 
-// Meaningful Snippet: Function Pointer Declaration
-// Syntax: return_type (*pointer_name)(parameter_types)
+// Syntax:
+// return_type (*pointer_name)(parameter_types)
 int (*operation)(int, int);
 
-// Assignment
 operation = add;
-
-// Invocation
-int result = operation(5, 3); // result is 8
-// OR:
+int result = operation(5, 3);
+// or
 int result_alt = (*operation)(5, 3);
 ```
 
@@ -710,18 +693,13 @@ int result_alt = (*operation)(5, 3);
 Function pointers are the core mechanism for **callback functions**, where one function calls a function provided by the caller.
 
 ```c
-// Meaningful Snippet: Function Pointer (Callback)
-// Function that accepts a function pointer as an argument
 void perform_operation(int x, int y, int (*func)(int, int)) {
     int result = func(x, y);
     printf("Result: %d\n", result);
 }
 
-// Example usage
-perform_operation(10, 5, add); // Pass the 'add' function address
+perform_operation(10, 5, add);
 ```
-
----
 
 ## ⚙️ Inline Assembly
 
@@ -732,171 +710,151 @@ perform_operation(10, 5, add); // Pass the 'add' function address
 The primary syntax used by GCC and Clang is the `asm` or `__asm__` keyword, followed by the specific assembly instructions and constraints.
 
 ```c
-// Meaningful Snippet: Basic Inline Assembly (x86/x64)
 int a = 10, b = 20, sum;
 
-// 'a' and 'b' are input, 'sum' is output
 __asm__ (
     "addl %1, %0" // Add operand 1 to operand 0
-    : "=r" (sum)  // Output: sum is stored in a general-purpose register ('r')
+    : "=r" (sum)  // Output: sum is stored in a general-purpose register
     : "r" (a), "r" (b) // Inputs: a and b are loaded into registers
 );
-// The compiler translates this roughly to: sum = a + b, but at the instruction level
 ```
 
-#### 🛠️ Structure of `__asm__`
+## 💾 Dynamic Memory Allocation
+
+Dynamic memory allocation allows a program to request memory at **runtime** (during execution) from an area called the **heap**, unlike static allocation (on the stack or global) which occurs at compile time or program startup.
+
+### 🔑 Standard Functions
+
+These functions require the inclusion of the **`<stdlib.h>`** header.
+
+| Function  | Signature (Simplified)                      | Description                                                                                              |
+| :-------- | :------------------------------------------ | :------------------------------------------------------------------------------------------------------- |
+| `malloc`  | `void* malloc(size_t size)`                 | Allocates `size` bytes of **uninitialized** memory and returns a `void*` pointer (or `NULL` on failure). |
+| `calloc`  | `void* calloc(size_t num, size_t size)`     | Allocates memory for an array of `num` elements of size `size` and **initializes all bytes to zero**.    |
+| `realloc` | `void* realloc(void* ptr, size_t new_size)` | **Resizes** the memory block previously allocated at `ptr` to `new_size` bytes. It may move the block.   |
+| `free`    | `void free(void* ptr)`                      | **Deallocates** the memory block pointed to by `ptr`. After `free`, `ptr` becomes a _dangling pointer_.  |
+
+### 📝 `malloc` Usage Example
 
 ```c
-__asm__ (
-    "assembly template"
-    : output_operands      // Optional: Variables to be updated by assembly
-    : input_operands       // Optional: Variables used as input
-    : clobbers             // Optional: List of registers modified by the assembly
-);
-```
-
-| Component    | Description                                                                                                                                                         |
-| :----------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| **Template** | A string containing the actual assembly instructions, with placeholders (`%0`, `%1`, etc.) for operands.                                                            |
-| **Output**   | Specifies output variables and the constraints (e.g., `"=r"` means output into a register).                                                                         |
-| **Input**    | Specifies input variables and their constraints.                                                                                                                    |
-| **Clobbers** | Informs the compiler which registers or memory locations the assembly block modifies that are _not_ explicitly listed as outputs (e.g., the stack pointer, memory). |
-
----
-
-## 🟢 Process Creation and Management with Syscalls
-
-In POSIX-compliant operating systems (like Linux), processes are managed through a set of fundamental **system calls**.
-
-| Syscall                | Purpose                                                                                                     |
-| :--------------------- | :---------------------------------------------------------------------------------------------------------- |
-| `fork()`               | Creates a new process (the **child**) that is an almost exact copy of the calling process (the **parent**). |
-| `exec()` family        | Replaces the current process's memory space with a new program.                                             |
-| `exit()`               | Terminates the calling process.                                                                             |
-| `wait()` / `waitpid()` | Suspends the calling process until one of its children terminates.                                          |
-| `clone()`              | Linux-specific syscall for creating processes or threads with fine-grained control over resource sharing.   |
-
-### 🌳 `fork()`
-
-The primary way to create a new process. When `fork()` is called, it returns:
-
-- **Positive value (Child PID):** To the **parent** process.
-- **`0`:** To the **child** process.
-- **`-1`:** If an error occurred.
-
-<!-- end list -->
-
-```c
-// Meaningful Snippet: fork()
-#include <unistd.h>
-#include <sys/types.h>
-
-pid_t pid = fork();
-
-if (pid == 0) {
-    // This code runs in the CHILD process
-    printf("Child process (PID: %d) is running.\n", getpid());
-} else if (pid > 0) {
-    // This code runs in the PARENT process
-    printf("Parent process (PID: %d) created child %d.\n", getpid(), pid);
-} else {
-    // fork() failed
-    perror("fork failed");
-}
-```
-
-### 🚀 `exec()` Family
-
-The `exec` system calls (e.g., `execlp`, `execvp`) replace the entire contents of the calling process's memory (code, data, stack) with a new program. If successful, `exec` **never returns** to the calling code.
-
-```c
-// Meaningful Snippet: execvp()
-// Typically called inside the child process after a fork()
-char *args[] = {"/bin/ls", "-l", NULL}; // Program path and arguments
-
-// Replaces the current process with 'ls -l'
-execvp(args[0], args);
-
-// Only executes if execvp fails
-perror("execvp failed");
-exit(EXIT_FAILURE);
-```
-
-### ⏳ `wait()` and `waitpid()`
-
-These calls allow a parent process to **synchronize** with its child, typically waiting for the child to finish and retrieving its **exit status**. This also prevents the child from becoming a **zombie process**.
-
-```c
-// Meaningful Snippet: wait()
-#include <sys/wait.h>
-
-int status;
-pid_t child_pid = fork();
-
-if (child_pid > 0) {
-    // Parent waits for any child
-    wait(&status);
-
-    if (WIFEXITED(status)) {
-        printf("Child exited with status %d\n", WEXITSTATUS(status));
-    }
-}
-```
-
----
-
-## 🚦 Signals (`signal.h`)
-
-**Signals** are a limited form of inter-process communication (IPC) used to notify a process of an event. They are asynchronous and can interrupt a process's normal execution flow. The primary header for signal handling is `<signal.h>`.
-
-### 🚨 Common Signals
-
-| Signal    | Default Action      | Description                                                             |
-| :-------- | :------------------ | :---------------------------------------------------------------------- |
-| `SIGINT`  | Terminate           | Generated when a user presses **Ctrl-C** (interrupt).                   |
-| `SIGKILL` | Terminate           | Cannot be caught, blocked, or ignored. **Kills** the process instantly. |
-| `SIGSTOP` | Stop                | Cannot be caught or ignored. **Stops** the process (can be resumed).    |
-| `SIGTERM` | Terminate           | The **standard request** to terminate (can be caught).                  |
-| `SIGSEGV` | Terminate/Core Dump | Invalid memory access (Segmentation fault).                             |
-| `SIGCHLD` | Ignore              | Sent to the parent when a child process stops or terminates.            |
-
-### 🤝 Signal Handling with `signal()`
-
-The `signal()` function is the traditional, though less portable/reliable, way to establish a **signal handler**—a function executed when a specific signal is received.
-
-```c
-// Meaningful Snippet: signal()
-#include <signal.h>
+#include <stdlib.h>
 #include <stdio.h>
-#include <unistd.h>
-
-// Signal Handler Function
-void sigint_handler(int sig) {
-    printf("\nCaught SIGINT (%d). Ignoring interrupt.\n", sig);
-    // In a real application, a safe function like write() or exit() should be used here.
-}
 
 int main() {
-    // Set up the handler for SIGINT (Ctrl+C)
-    if (signal(SIGINT, sigint_handler) == SIG_ERR) {
-        perror("signal failed");
+    // 1. Allocate space for 5 integers
+    int num_elements = 5;
+    int *arr = (int *)malloc(num_elements * sizeof(int));
+
+    // 2. Error Check
+    if (arr == NULL) {
+        perror("Error allocating memory");
         return 1;
     }
 
-    printf("Press Ctrl+C to test the signal handler...\n");
-
-    while (1) {
-        sleep(1);
+    // 3. Usage (e.g., initialization)
+    for (int i = 0; i < num_elements; i++) {
+        arr[i] = i * 10;
     }
+
+    // 4. Deallocate
+    free(arr);
+    arr = NULL; // Prevent dangling pointer
+
     return 0;
 }
 ```
 
-### 🚧 Blocking Signals (Advanced)
+## 🔒 Storage Class Specifiers: `static` and `extern`
 
-For robust and advanced signal handling, especially in multithreaded applications, the functions in `<sigaction.h>` (like `sigaction()`, `sigprocmask()`) are preferred over `signal()`. They allow signals to be **blocked** during critical sections of code and provide more control over the signal handler's execution context.
+Storage class specifiers determine the **lifetime** and **visibility** (_scope_) of variables and functions.
+
+| Specifier  | Lifetime                                                                                      | Visibility (Scope)                                                                          |
+| :--------- | :-------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------ |
+| `auto`     | Local: Allocated on the **stack**, destroyed on block exit (default for local variables).     | Local (within the block/function).                                                          |
+| `register` | Local (on stack): Suggests the compiler use a CPU **register** (if possible) for fast access. | Local (within the block/function).                                                          |
+| `static`   | **Global**: Lifetime is for the entire duration of the program (like global variables).       | **Local** or **File-Local**: Limits visibility to the current function or the current file. |
+| `extern`   | Global: Lifetime is for the entire duration of the program.                                   | **Global**: Variable/function is defined in another source file (translation unit).         |
+
+### 🛑 The `static` Keyword
+
+> `static` can't be used in `struct`
+
+The `static` keyword has two main uses depending on the context:
+
+#### 1\. Local `static` (Inside a Function)
+
+- **Global Lifetime**: The variable is allocated only once and **retains its value** between function calls.
+- **Local Visibility**: The variable can only be accessed from within the function where it is declared.
+- It is initialized to **zero** upon the first call (if no explicit value is given).
+
+<!-- end list -->
 
 ```c
-// Sending a signal to another process (or itself)
-// kill(pid, SIGTERM);
+#include <stdio.h>
+
+void counter() {
+    static int count = 0;
+    count++;
+    printf("Call: %d\n", count);
+}
+
+int main() {
+    counter(); // Call: 1
+    counter(); // Call: 2
+    return 0;
+}
 ```
+
+#### 2\. Global `static` (Outside a Function)
+
+- Applied to global variables or functions.
+- **File-Level Visibility**: Limits the visibility of the variable or function to the specific source file (`.c` file) in which it is declared.
+- This prevents name clashes with variables or functions of the same name defined in other files.
+
+<!-- end list -->
+
+```c
+// file: util.c
+
+// 'secret_data' is only visible inside util.c
+static int secret_data = 100;
+
+// 'internal_func' is only accessible inside util.c
+static void internal_func() {
+    // ...
+}
+```
+
+### 🌍 The `extern` Keyword
+
+- **Declares, not Defines**: `extern` is used to declare a global variable or function that is **defined** (allocated memory and/or implemented) in a different compilation unit (another `.c` file).
+- It is essential for **linking** multi-file programs.
+
+#### 📝 Multi-File Example
+
+```c
+// file: data.c (The Definition)
+int global_counter = 0; // The definition (memory allocation)
+
+void increment_counter() {
+    global_counter++;
+}
+```
+
+```c
+// file: main.c (The Declaration/Usage)
+#include <stdio.h>
+
+// The declaration: Tells the compiler global_counter is defined elsewhere
+extern int global_counter;
+extern void increment_counter(); // Often implicit for functions
+
+int main() {
+    printf("Initial: %d\n", global_counter); // 0
+    increment_counter();
+    printf("After call: %d\n", global_counter); // 1
+    return 0;
+}
+```
+
+**Note**: The `extern` declaration for functions is often implicit in C. However, using `extern` explicitly for global variables in the file that uses them (but doesn't define them) is good practice.
